--- a/src/styles/components/examples/_buttons.css
+++ b/src/styles/components/examples/_buttons.css
@@ -17,3 +17,12 @@ Buttons & Filter Buttons
   
   &:hover { @apply .yellow }
 }
+
+/* When the input is checked, adjust the styling of the NEXT label in the DOM */
+.filter-input {
+
+	&:checked + label {
+    @apply .white;
+	}
+  
+}
