--- a/src/styles/components/examples/_buttons.css
+++ b/src/styles/components/examples/_buttons.css
@@ -24,5 +24,8 @@ Buttons & Filter Buttons
 	&:checked + label {
     @apply .white;
 	}
-  
+
 }
+
+/* Prevent fieldset height from paritally collapsing when labels are the only children */
+.filter-label { @apply .inline-flex }
