Convert Filter And Limit and its example to use radio button filters (instead of buttons

--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -1927,167 +1927,7 @@ Component classes
 
 */
 
-/* These go with the arrows in components/examples/Arrows */
-
-/* 
- *
- * Arrow down
- *
- */
-
-.button-scroll-down {
-  width: 48px;
-  height: 48px;
-  position: absolute;
-  z-index: 40;
-  bottom: -24px;
-  left: 50%;
-  margin: 0 0 0 -24px;
-  cursor: pointer;
-  display: block;
-}
-
-.button-scroll-down .arrow-line {
-  width: 2px;
-  height: 18px;
-  top: 14px;
-  left: 50%;
-  position: absolute;
-  display: block;
-  margin: 0 0 0 -1px;
-  background: #30393b;
-  z-index: 1;
-}
-
-.button-scroll-down:hover .arrow-line {
-  transition-delay: 200ms;
-  height: 49px;
-}
-
-.button-scroll-down .arrow {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 7px 6px 0 6px;
-  border-color: #30393b transparent transparent transparent;
-  display: block;
-  position: absolute;
-  z-index: 4;
-  bottom: -4px;
-  left: -5px;
-}
-
-/* 
- *
- * Arrow left
- *
- */
-
-.arrow-left {
-  width: 70px;
-  height: 60px;
-  display: block;
-  float: none;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  z-index: 10;
-  bottom: 0;
-  left: 0;
-}
-
-.arrow-left .arrow-line {
-  width: 54px;
-  height: 2px;
-  top: 50%;
-  right: -28px;
-  position: absolute;
-  display: block;
-  margin: -1px 0 0 0;
-  background: #282828;
-  z-index: 1;
-}
-
-.arrow-left .arrow {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 6px 7px 6px 0;
-  border-color: transparent #282828 transparent transparent;
-  position: absolute;
-  z-index: 4;
-  display: block;
-  left: -4px;
-  top: -5px;
-}
-
-.arrow-left:hover .arrow-line {
-  transition-delay: 200ms;
-  -webkit-transform: translateX(-23px);
-          transform: translateX(-23px);
-}
-
-.group:hover .arrow-left .arrow-line {
-  transition-delay: 200ms;
-  -webkit-transform: translateX(-23px);
-          transform: translateX(-23px);
-}
-
-/* 
- *
- * Arrow right
- *
- */
-
-.arrow-right {
-  width: 70px;
-  height: 60px;
-  display: block;
-  float: none;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  z-index: 10;
-  bottom: 0;
-  right: 0;
-}
-
-.arrow-right .arrow-line {
-  width: 54px;
-  height: 2px;
-  top: 50%;
-  left: -28px;
-  position: absolute;
-  display: block;
-  margin: -1px 0 0 0;
-  background: #282828;
-  z-index: 1;
-}
-
-.arrow-right .arrow {
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 6px 0 6px 7px;
-  border-color: transparent transparent transparent #282828;
-  position: absolute;
-  z-index: 4;
-  display: block;
-  right: -4px;
-  top: -5px;
-}
-
-.arrow-right:hover .arrow-line {
-  transition-delay: 200ms;
-  -webkit-transform: translateX(23px);
-          transform: translateX(23px);
-}
-
-.group:hover .arrow-right .arrow-line {
-  transition-delay: 200ms;
-  -webkit-transform: translateX(23px);
-          transform: translateX(23px);
-}
+/* @import './examples/arrows'; */
 
 /*
  *
@@ -2174,10 +2014,10 @@ Component classes
 }
 
 /*
-
-Buttons & Filter Buttons
-
-*/
+ *
+ * Buttons
+ *
+ */
 
 .btn {
   border-width: .125rem;
@@ -2214,36 +2054,6 @@ Buttons & Filter Buttons
     font-size: 1.25rem;
     font-size: var(--font-size-4);
   }
-}
-
-.filter-btn {
-  margin-left: .5rem;
-  margin-left: var(--spacing-2);
-  margin-right: .5rem;
-  margin-right: var(--spacing-2);
-  font-size: 1.5rem;
-  font-size: var(--font-size-3);
-  color: #fff;
-  color: var(--white);
-  transition: all .2s ease-in-out;
-}
-
-.filter-btn:hover {
-  color: #ffd700;
-  color: var(--yellow);
-}
-
-/* When the input is checked, adjust the styling of the NEXT label in the DOM */
-
-.filter-input:checked + label {
-  color: #fff;
-  color: var(--white);
-}
-
-/* Prevent fieldset height from paritally collapsing when labels are the only children */
-
-.filter-label {
-  display: inline-flex;
 }
 
 /*
@@ -2346,154 +2156,42 @@ Containers
   }
 }
 
-/* These animations go with floating items like Ball.js or react-shapes */
-
-.anim-vertical {
-  -webkit-animation: anim-vertical 7s ease-in-out infinite alternate;
-          animation: anim-vertical 7s ease-in-out infinite alternate;
-}
-
-.anim-horizontal {
-  -webkit-animation: anim-horizontal 11s ease-in-out infinite alternate;
-          animation: anim-horizontal 11s ease-in-out infinite alternate;
-}
-
-.anim-diagonal-right {
-  -webkit-animation: anim-diagonal-right 9s ease-in-out infinite alternate;
-          animation: anim-diagonal-right 9s ease-in-out infinite alternate;
-}
-
-.anim-diagonal-left {
-  -webkit-animation: anim-diagonal-left 8s ease-in-out infinite alternate;
-          animation: anim-diagonal-left 8s ease-in-out infinite alternate;
-}
-
-@-webkit-keyframes anim-vertical {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, 0, -80);
-            transform: matrix(-1, 0, 0, -1, 0, -80);
-  }
-}
-
-@keyframes anim-vertical {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, 0, -80);
-            transform: matrix(-1, 0, 0, -1, 0, -80);
-  }
-}
-
-@-webkit-keyframes anim-horizontal {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, -80, 0);
-            transform: matrix(-1, 0, 0, -1, -80, 0);
-  }
-}
-
-@keyframes anim-horizontal {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, -80, 0);
-            transform: matrix(-1, 0, 0, -1, -80, 0);
-  }
-}
-
-@-webkit-keyframes anim-diagonal-right {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, 80, -80);
-            transform: matrix(-1, 0, 0, -1, 80, -80);
-  }
-}
-
-@keyframes anim-diagonal-right {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, 80, -80);
-            transform: matrix(-1, 0, 0, -1, 80, -80);
-  }
-}
-
-@-webkit-keyframes anim-diagonal-left {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, -80, -80);
-            transform: matrix(-1, 0, 0, -1, -80, -80);
-  }
-}
-
-@keyframes anim-diagonal-left {
-  0% {
-    -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
-            transform: matrix(1, 0, 0, 1, 0, 0);
-  }
-
-  100% {
-    -webkit-transform: matrix(-1, 0, 0, -1, -80, -80);
-            transform: matrix(-1, 0, 0, -1, -80, -80);
-  }
-}
-
-/* 
+/*
  *
- * Animation Delay (needs to come after all compound animation declarations)
+ * Filter Inputs & Labels
  *
  */
 
-.anim-delay-1 {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+/*
+ *
+ * Radio Buttons
+ *
+ */
+
+/* When the input is checked, adjust the styling of the NEXT label in the DOM */
+
+.filter-input:checked + label {
+  background-color: #ff80cc;
+  background-color: var(--pink);
+  color: #000;
+  color: var(--black);
 }
 
-.anim-delay-2 {
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+/* Prevent the fieldset height from partially collapsing */
+
+.filter-label {
+  display: inline-flex;
 }
 
-.anim-delay-3 {
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
+/*
+ *
+ * Checkboxes
+ *
+ */
 
-.anim-delay-4 {
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-}
+/* ... */
 
-.anim-delay-5 {
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
+/* @import './examples/floating-shapes'; */
 
 /* 
 
@@ -2619,6 +2317,8 @@ Inputs
   box-shadow: inset 0 -12px 0 0 #ff80cc;
   box-shadow: inset 0 -12px 0 0 var(--pink);
 }
+
+/* @import './examples/tooltips'; */
 
 /*
 
