--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -4,13 +4,15 @@ Component classes
 
 */
 
-@import './examples/arrows';
+/* @import './examples/arrows'; */
 @import './examples/blockquotes';
 @import './examples/burger';
 @import './examples/buttons';
 @import './examples/containers';
-@import './examples/floating-shapes';
+@import './examples/filters';
+/* @import './examples/floating-shapes'; */
 @import './examples/headings';
 @import './examples/icons';
 @import './examples/inputs';
 @import './examples/links';
+/* @import './examples/tooltips'; */
