--- a/src/styles/plugins/examples/_twitter-fetcher.css
+++ b/src/styles/plugins/examples/_twitter-fetcher.css
@@ -1,19 +1,71 @@
 /* 
+ *
+ * Twitter Fetcher
+ *
+ */
 
-Twitter Fetcher 
+/*
+ *
+ * Styling When Using Custom Markup (fetching data only)
+ *
+ */
 
-{All layout and styling happens here.}
+.tweet {
 
-*/
+  /* Links inside tweets (including hashtags) */
+  .customisable { 
+    @apply .blue .animate; 
+  
+    &:hover {@apply .black} 
+  }
+
+  /* This class is applied automatically to URL links inside tweets (not hashtags) */
+  /*
+  .link { @apply .blue }
+  */
+
+  /* This class is applied automatically to hashtag links inside tweets */
+  /*
+  .hashtag { @apply .blue }
+  */
+
+
+
+
+
+
+
+}
+
+
+
+
+/*
+ *
+ * Styling When Using Default Markup (all layout and styling happens here)
+ *
+ */
 
 /* Hide user */
+/*
 .user { @apply .dn }
-
-/* Hide interaction */
-.interact { @apply .dn }
+*/
 
 /* Style tweet */
-.tweet {
-  @apply .ml-auto .mr-auto .measure .lh-title .courier .fw6;
-  font-size: 1.1rem;
- }
+/*
+.tweet { @apply .ml-auto .mr-auto .measure .lh-title }
+*/
+
+/* Style links inside tweets */
+/*
+.tweet > a { 
+  @apply .underline .blue .animate;
+
+  &:hover { @apply .pink }
+}
+*/
+
+/* Hide interaction */
+/*
+.interact { @apply .dn }
+*/
