--- a/src/styles/plugins/examples/_twitter-fetcher.css
+++ b/src/styles/plugins/examples/_twitter-fetcher.css
@@ -12,7 +12,7 @@
 
 .tweet {
 
-  /* Links inside tweets (including hashtags) */
+  /* This class is applied automatically to all links inside tweets (including hashtags) */
   .customisable { 
     @apply .blue .animate; 
   
