Add enter/exit transitions to filter examples

--- a/src/styles/components/examples/_blockquotes.css
+++ b/src/styles/components/examples/_blockquotes.css
@@ -4,8 +4,8 @@
  *
  */
 
-.quote { 
-  @apply .measure .lh-copy; 
+.quote-body { 
+  @apply .ml-auto .mr-auto .measure .lh-copy; 
   /* add quotation marks in ::after / ::before using content: open-quote / close-quote? */ 
 }
 .quote-source { @apply .inline-flex .pt2 .fs-normal }
