--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -2003,7 +2003,9 @@ Component classes
  *
  */
 
-.quote {
+.quote-body {
+  margin-left: auto;
+  margin-right: auto;
   max-width: 66ch;
   line-height: 1.5;
   /* add quotation marks in ::after / ::before using content: open-quote / close-quote? */
