--- a/src/styles/base/index.css
+++ b/src/styles/base/index.css
@@ -4,7 +4,7 @@
  *
  */
 
+/* @import './font-face'; */ /* Now using link tag with subfont package instead */
 @import './tailwind-preflight';
 @import './reset';
 @import './a11y';
-@import './font-face';
