--- a/src/styles/components/examples/_blockquotes.css
+++ b/src/styles/components/examples/_blockquotes.css
@@ -5,7 +5,7 @@
  */
 
 .quote-body { 
-  @apply .ml-auto .mr-auto .measure .lh-copy; 
+  @apply .lh-copy; 
   /* add quotation marks in ::after / ::before using content: open-quote / close-quote? */ 
 }
 .quote-source { @apply .inline-flex .pt2 .fs-normal }
