--- a/src/styles/builds/after-postcss/output.css
+++ b/src/styles/builds/after-postcss/output.css
@@ -727,6 +727,17 @@ a {
   color: inherit;
 }
 
+/* 
+ *
+ * 4. Buttons
+ *
+ */
+
+button {
+  color: inherit;
+  letter-spacing: inherit;
+}
+
 /*
  *
  * 5. Lists
@@ -1986,9 +1997,6 @@ Component classes
  */
 
 .quote-body {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 66ch;
   line-height: 1.5;
   /* add quotation marks in ::after / ::before using content: open-quote / close-quote? */
 }
@@ -2224,6 +2232,7 @@ Containers
 
 .filter-input {
   display: none;
+  /* necessary to hide input in IE */
 }
 
 .filter-input:checked + label {
