--- a/src/styles/components/examples/_filters.css
+++ b/src/styles/components/examples/_filters.css
@@ -12,7 +12,7 @@
 
 /* When the input is checked, adjust the styling of the NEXT label in the DOM */
 .filter-input {
-  @apply .dn;
+  @apply .dn; /* necessary to hide input in IE */
 
 	&:checked + label {
     @apply .bg-pink .black;
