--- a/src/styles/supports/examples/_grid.css
+++ b/src/styles/supports/examples/_grid.css
@@ -8,33 +8,22 @@
  */
 
 @supports (display: grid) {
-
- /* 
-  * 
-  * Utilities
-  *
-  */
-
-  .span-2 { grid-column: span 2 }
-  .span-3 { grid-column: span 3 }
   
  /* 
   * 
-  * Home > Hero
+  * Media
   *
   */
 
-  .home-hero-grid {
-    @media (--lg) {
-
-      /* Grid layout */
+  .media-grid {
+    @media (--sm) {
       display: grid;
-      grid-template-columns: 4fr 6fr;
-      align-items: end;
-
-      /* Reset margins & widths */
-      & > div > div { @apply .mb0 }
+      grid-column-gap: 1rem;
+      grid-template-columns: repeat(2, 1fr);
     }
+
+    @media (--md) { grid-template-columns: repeat(3, 1fr) }
+    @media (--lg) { grid-template-columns: repeat(4, 1fr) }
   }
 
 }
