--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -25,7 +25,10 @@ body {
   overflow-x: hidden;
 
   /* Font-size */
-  @media (--sm) { font-size: 1.05rem }
+  font-size: 16px;
+  @media (--sm) { font-size: 17px }
+  @media (--md) { font-size: 18px }
+  @media (--lg) { font-size: 19px }
     
   /* Font-smoothing */
   /* See: https://css-tricks.com/understanding-web-fonts-getting */
