--- a/src/styles/utilities/_font-family.css
+++ b/src/styles/utilities/_font-family.css
@@ -67,9 +67,11 @@ code,
   font-family: 'News Cycle', 'Arial Narrow', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 }
 
-.oswald    { font-family: 'Oswald', sans-serif }
+.open-sans { 
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
 
-.open-sans { font-family: 'Open Sans', sans-serif }
+.oswald    { font-family: 'Oswald', sans-serif }
 
 .raleway { 
   font-family: Raleway, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
@@ -111,6 +113,10 @@ code,
 
 .times { 
   font-family: times, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol' 
+}
+
+.ultra { 
+  font-family: Ultra, "Arial Black", Constantia, 'Lucida Bright', Lucidabright, 'Lucida Serif', Lucida, 'DejaVu Serif', 'Bitstream Vera Serif', 'Liberation Serif', Georgia, serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'
 }
 
 /*
