--- a/src/styles/utilities/_translate.css
+++ b/src/styles/utilities/_translate.css
@@ -6,14 +6,26 @@
 
 @responsive {
 
+  /* Translate X */
+  .transX-100 { transform: translateX(100%) }
   .transX-50 { transform: translateX(50%) }
-  .transY-50 { transform: translateY(50%) }
-
   .transX-0   { transform: translateX(0) }
-  .transY-0   { transform: translateY(0) }
-
   .transX--50 { transform: translateX(-50%) }
+  .transX--100 { transform: translateX(-100%) }
+
+  /* Translate Y */
+  .transY-100 { transform: translateY(100%) }
+  .transY-50 { transform: translateY(50%) }
+  .transY-0   { transform: translateY(0) }
   .transY--50 { transform: translateY(-50%) }
+  .transY--100 { transform: translateY(-100%) }
+
+  /* Translate XY */
+  .transXY-0    { transform: translate(0, 0) }
+  .transXY-50   { transform: translate(50%, 50%) }
+  .transXY-100  { transform: translate(100%, 100%) }
+  .transXY--100 { transform: translate(-100%, -100%) }
+  .transXY--50  { transform: translate(-50%, -50%) }
 
 }
 
