Updates based on Kings Valley Paving's site

--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -14,6 +14,7 @@ Component classes
 @import './examples/burger-2';
 @import './examples/buttons';
 @import './examples/containers';
+@import './examples/emoji';
 @import './examples/fading-carousel';
 @import './examples/filters';
 @import './examples/floating-shapes';
