--- a/src/styles/base/_font-face.css
+++ b/src/styles/base/_font-face.css
@@ -2,7 +2,8 @@
 
 Font-face declarations
 
-TODO: make the path to the fonts directory `../../../fonts/font-files.woff`
+TODO: make the path to the fonts directory `../fonts/font-files.woff`
+TODO: include specific blocks for "font-style: italic", "font-weight: 700", etc so the browser doesn't fake these missing styles because it doesn't realize I have a webfont for it: https://www.smashingmagazine.com/2018/07/smashingconf-videos-web-fonts-performance/
 
 */
 
@@ -12,7 +13,7 @@ TODO: make the path to the fonts directory `../../../fonts/font-files.woff`
   font-style: normal;
   font-weight: 400;
   src: local('News Cycle'), local('NewsCycle'),
-       url('../../../fonts/news-cycle-v14-latin-ext_latin-regular.woff2') format('woff2'),
-       url('../../../fonts/news-cycle-v14-latin-ext_latin-regular.woff') format('woff');
+       url('../fonts/news-cycle-v14-latin-ext_latin-regular.woff2') format('woff2'),
+       url('../fonts/news-cycle-v14-latin-ext_latin-regular.woff') format('woff');
 } */
 
