--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -13,6 +13,7 @@ Component classes
 @import './examples/burger-1';
 @import './examples/burger-2';
 @import './examples/buttons';
+@import './examples/checkbox';
 @import './examples/containers';
 @import './examples/emoji';
 @import './examples/fading-carousel';
