Update based on Peter's site

--- a/src/styles/components/examples/_containers.css
+++ b/src/styles/components/examples/_containers.css
@@ -7,6 +7,8 @@ Containers
 .container { 
   @apply .ml-auto .mr-auto .ph3 .mw9;
 
+  /* TODO: try padding-left: 3%; padding-right: 3% instead? */
+
   @media (--md) { @apply .ph4 }
   @media (--lg) { @apply .ph5 }
 
