--- a/src/styles/components/examples/_burger-1.css
+++ b/src/styles/components/examples/_burger-1.css
@@ -1,36 +1,30 @@
 /* 
 
-These go with the burger in Aria's components/BurgerAndOverlay 
+These go with the burger in Peter's components/BurgerAndOverlay 
 
 */
 
 /* purgecss start ignore */
 
 .burger {
-  @apply .fixed .top-0 .right-0 .mr1 .bg-white .animate .cursor-pointer;
+  @apply .relative .animate .cursor-pointer;
 
-  width: 70px;
-  height: 50px;
-  z-index: 10001;
-
-  @media (--md) { @apply .mr4 }
-  @media (--lg) { @apply .mr5 }
+  width: 30px;
+  height: 24px;
 }
 
 .burger-layer {
-  @apply .db .absolute .left-50 .origin-center;
+  @apply .db .absolute .z-1;
 
-  width: 31px;
+  width: 30px;
   height: 4px;
-  background: #282828;
-  z-index: 5;
-  top: 23px;
-  margin: 0 0 0 -15px;
+  background-color: currentColor;
+  top: 10px;
 }
 
 .burger-layer.top { transform: translateY(-8px) }
 .burger-layer.bottom { transform: translateY(8px); }
 
-.burger:hover .burger-layer { @apply .bg-hot-pink }
+.burger:hover .burger-layer { @apply .bg-pink }
 
 /* purgecss end ignore */
