--- a/src/styles/base/_reset.css
+++ b/src/styles/base/_reset.css
@@ -19,15 +19,22 @@
  * 
  */
 
-html,
+html {
+  font-size: 16px;
+  
+  @media (--sm) { font-size: 16.5px }
+  @media (--md) { font-size: 17x }
+  @media (--lg) { font-size: 17.5px }
+}
+
 body {
   min-height: 100vh;
   overflow-x: hidden;
 
   /* Font-size */
-  @media (--sm) { font-size: calc(16.5 / 16 * 1rem) }
+  /* @media (--sm) { font-size: calc(16.5 / 16 * 1rem) }
   @media (--md) { font-size: calc(17 / 16 * 1rem) }
-  @media (--lg) { font-size: calc(17.5 / 16 * 1rem) }
+  @media (--lg) { font-size: calc(17.5 / 16 * 1rem) } */
 
   /* TODO: use this auto-resizing formula instead? Something strange about how it enlarges some text and reduces other text... */
   /* font-size: minFnt + (maxFnt - minFot) * (100vw - minScrnPx) / (maxScrn - minScrn) */
